# server-monitoring

./: .dockerignore  .gitignore  CHANGES.md  CLAUDE.md  Cargo.toml  DESIGN_REWAMP_ROADMAP.md  Dockerfile  Dockerfile.prebuilt  GEMINI.md  INSTALL.md  INSTALL_CHANGELOG.txt  INSTALL_IMPROVEMENTS.md  INSTALL_SUMMARY.md  README.md  ROADMAP.md  TESTING.md  compose.dev.yaml  compose.yaml  config.example.json  config.json  install.sh  viewer.example.toml
.cargo/: config.toml
.github/workflows/: ci_checks.yml  docker-publish.yml
config/: README.md  config.example.json
docs/api/: API_DESIGN.md
docs/architecture/: REFACTORING_PLAN.md
docs/features/: DASHBOARD.md  METRIC_PERSISTENCE.md  SERVICE_MONITORING.md
migrations/: 20250104000001_create_metrics_table.sql  20250104000002_create_service_checks_table.sql
src/: alerts.rs  config.rs  discord.rs  lib.rs  limit_monitor.rs  util.rs
src/actors/: alert.rs  collector.rs  messages.rs  mod.rs  service_monitor.rs  storage.rs
src/api/: error.rs  mod.rs  state.rs  types.rs  utils.rs  websocket.rs
src/api/middleware/: auth.rs
src/api/routes/: health.rs  mod.rs  servers.rs  services.rs  stats.rs
src/monitors/: mod.rs  resources.rs  server.rs
src/storage/: backend.rs  error.rs  memory.rs  mod.rs  schema.rs  sqlite.rs
src/viewer/: app.rs  config.rs  mod.rs  state.rs  websocket.rs
src/viewer/ui/: alerts.rs  layout.rs  mod.rs  servers.rs  services.rs  widgets.rs
tests/: integration_tests.rs  property_tests.rs
tests/helpers/: mod.rs
tests/integration/: actor_pipeline.rs  api_endpoints.rs  concurrency.rs  failure_scenarios.rs  helpers.rs  service_monitoring.rs  storage_persistence.rs
web-dashboard/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-dashboard/public/: manifest.json
web-dashboard/src/: App.tsx  index.css  vite-env.d.ts
web-dashboard/src/api/: client.ts  types.ts
web-dashboard/src/components/alerts/: AlertTimeline.module.css  AlertTimeline.tsx
web-dashboard/src/components/layout/: Header.module.css  Header.tsx  Layout.module.css  Layout.tsx  Sidebar.module.css  Sidebar.tsx  ThemeSwitcher.module.css  ThemeSwitcher.tsx
web-dashboard/src/components/servers/: CircularProgress.module.css  CircularProgress.tsx  CpuChart.module.css  CpuChart.tsx  ServerDetail.module.css  ServerDetail.tsx  ServerList.module.css  ServerList.tsx  ServerSelector.module.css  ServerSelector.tsx  TemperatureChart.module.css  TemperatureChart.tsx
web-dashboard/src/components/services/: ServiceList.module.css  ServiceList.tsx
web-dashboard/src/hooks/: useKeyboardShortcuts.ts  useMonitoring.ts  useWebSocket.ts
web-dashboard/src/stores/: monitoringStore.ts
