[package]
name = "server-monitoring"
version = "0.1.0"
edition = "2024"
authors = ["Louis Meyer (H1ghBre4k3r) <h1ghbe4k3r@dev.bre4k3r.de>"]
license = "GPL-3.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
dotenv = "0.15.0"
regex = "1.10"
reqwest = { version = "0.12.23", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"], optional = true }
sysinfo = "0.37.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[features]
default = ["storage-sqlite"]
storage-sqlite = ["sqlx"]

[dev-dependencies]
# Mock HTTP server for testing agent endpoints
wiremock = "0.6"

# Property-based testing framework
proptest = "1.5"

# Enhanced test assertions
assert_matches = "1.5"
pretty_assertions = "1.4"

# Test utilities for tokio
tokio-test = "0.4"

# Async utilities for testing
futures = "0.3"

# URL parsing for tests
url = "2.5"

# Temporary directories for testing
tempfile = "3.15"
