[package]
name = "server-monitoring"
version = "0.1.0"
edition = "2024"
authors = ["Louis Meyer (H1ghBre4k3r) <h1ghbe4k3r@dev.bre4k3r.de>"]
license = "GPL-3.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3"
regex = "1.10"
reqwest = { version = "0.12.23", features = ["json"] }
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate"], optional = true }
sysinfo = "0.37.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# API Server (Phase 4.1)
axum = { version = "0.7", features = ["ws"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"], optional = true }

# TUI Dashboard (Phase 4.1)
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
toml = { version = "0.8", optional = true }

# API Documentation (Phase 4.1)
utoipa = { version = "5", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "8", features = ["axum"], optional = true }

[features]
default = ["storage-sqlite", "api", "dashboard"]
storage-sqlite = ["sqlx"]
api = ["axum", "tower", "tower-http", "utoipa", "utoipa-swagger-ui"]
dashboard = ["ratatui", "crossterm", "toml", "reqwest/cookies"]

[dev-dependencies]
# Mock HTTP server for testing agent endpoints
wiremock = "0.6"

# Property-based testing framework
proptest = "1.5"

# Enhanced test assertions
assert_matches = "1.5"
pretty_assertions = "1.4"

# Test utilities for tokio
tokio-test = "0.4"

# Async utilities for testing
futures = "0.3"

# URL parsing for tests
url = "2.5"

# Temporary directories for testing
tempfile = "3.15"
